--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </header>
       <section>
         <div class="hero">
-          <img class="m-hero" src="Image.png" alt="hero " />
+          <img class="m-hero" src="Image.png" alt="hero-img " />
         </div>
 
         <div class="hero-txt">
@@ -71,7 +71,7 @@
           <div class="h-btn">
             <button>All Categories</button>
           </div>
-        </div>
+        </div> <br><br>
 
         <div class="top-card-container">
           <div class="card">
@@ -85,50 +85,77 @@
           </div>
           <div class="card">
             <div class="card-icon">
-              <img src="Icon.png" alt="" />
+              <img src="Component 2.png" alt=" icon" />
             </div>
             <div class="card-txt">
-              <h5>Art & Design</h5>
+              <h5>Development</h5>
               <p>38 Courses</p>
             </div>
           </div>
           <div class="card">
             <div class="card-icon">
-              <img src="Icon.png" alt="" />
+              <img src="Icon (1).png" alt="icon" />
             </div>
             <div class="card-txt">
-              <h5>Art & Design</h5>
+              <h5>Communication</h5>
               <p>38 Courses</p>
             </div>
           </div>
           <div class="card">
             <div class="card-icon">
-              <img src="Icon.png" alt="" />
+              <img src="Group.png" alt="icon" />
             </div>
             <div class="card-txt">
-              <h5>Art & Design</h5>
+              <h5>Videography</h5>
               <p>38 Courses</p>
             </div>
           </div>
           <div class="card">
             <div class="card-icon">
-              <img src="Icon.png" alt="" />
+              <img src="Icon (2).png" alt="" />
             </div>
             <div class="card-txt">
-              <h5>Art & Design</h5>
+              <h5>Photography</h5>
               <p>38 Courses</p>
             </div>
           </div>
         </div>
-        <br /><br />
+        <br />
 
         <div class="top-card-container">
           <div class="card">
             <div class="card-icon">
-              <img src="Icon.png" alt="" />
+              <img src="Icon (3).png" alt="" />
             </div>
             <div class="card-txt">
-              <h5>Art & Design</h5>
+              <h5>Marketing</h5>
+              <p>38 Courses</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-icon">
+              <img src="Icon (4).png" alt="" />
+            </div>
+            <div class="card-txt">
+              <h5>Content Writing</h5>
+              <p>38 Courses</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-icon">
+              <img src="Icon (5).png" alt="" />
+            </div>
+            <div class="card-txt">
+              <h5>Finance</h5>
+              <p>38 Courses</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-icon">
+              <img src="Icon (7).png" alt="" />
+            </div>
+            <div class="card-txt">
+              <h5>Science</h5>
               <p>38 Courses</p>
             </div>
           </div>
@@ -137,34 +164,7 @@
               <img src="Icon.png" alt="" />
             </div>
             <div class="card-txt">
-              <h5>Art & Design</h5>
-              <p>38 Courses</p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-icon">
-              <img src="Icon.png" alt="" />
-            </div>
-            <div class="card-txt">
-              <h5>Art & Design</h5>
-              <p>38 Courses</p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-icon">
-              <img src="Icon.png" alt="" />
-            </div>
-            <div class="card-txt">
-              <h5>Art & Design</h5>
-              <p>38 Courses</p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-icon">
-              <img src="Icon.png" alt="" />
-            </div>
-            <div class="card-txt">
-              <h5>Art & Design</h5>
+              <h5>Network</h5>
               <p>38 Courses</p>
             </div>
           </div>
