--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <img src="Search.png" alt=" srch-icon" />
           </div>
           <div class="list-icon">
-            <i id="list" class="fa-solid fa-list">d</i>
+            <i id="list" class="fa-solid fa-list"></i>
           </div>
         </div>
 
