--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
 
         <div id="navColumn" class="nav-column">
-          <button id="x">X</button>
+          <button id="x">x</button>
           <a href="">Home</a>
           <a href=""> Courses</a>
           <a href="">Blog</a>
