--- a/index.html
+++ b/index.html
@@ -212,8 +212,28 @@
 
       <div class="counting-container">
         <div class="count-bx">
-          <h3>25K+</h3>
-          <p>Active Student</p>
+          <div>
+            <h3>25K+</h3>
+          <p>Active Students</p>
+          </div>
+        </div>
+        <div class="count-bx">
+          <div>
+            <h3>25K+</h3>
+          <p>Active Students</p>
+          </div>
+        </div>
+        <div class="count-bx">
+          <div>
+            <h3>25K+</h3>
+          <p>Active Students</p>
+          </div>
+        </div>
+        <div class="count-bx">
+          <div>
+            <h3>25K+</h3>
+          <p>Active Students</p>
+          </div>
         </div>
       </div>
     </div>
