--- a/index.html
+++ b/index.html
@@ -219,20 +219,20 @@
         </div>
         <div class="count-bx">
           <div>
-            <h3>25K+</h3>
-          <p>Active Students</p>
+            <h3>899</h3>
+          <p>Total Courses</p>
           </div>
         </div>
         <div class="count-bx">
           <div>
-            <h3>25K+</h3>
-          <p>Active Students</p>
+            <h3>158</h3>
+          <p>Instructor</p>
           </div>
         </div>
         <div class="count-bx">
           <div>
-            <h3>25K+</h3>
-          <p>Active Students</p>
+            <h3>100%</h3>
+          <p>Satisfactions Rate</p>
           </div>
         </div>
       </div>
