--- a/index.html
+++ b/index.html
@@ -75,102 +75,9 @@
         </div>
         <br /><br />
 
-        <div class="top-card-container">
-          <div class="card">
-            <div class="card-icon">
-              <img src="Icon.png" alt="" />
-            </div>
-            <div class="card-txt">
-              <h5>Art & Design</h5>
-              <p>38 Courses</p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-icon">
-              <img src="Component 2.png" alt=" icon" />
-            </div>
-            <div class="card-txt">
-              <h5>Development</h5>
-              <p>38 Courses</p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-icon">
-              <img src="Icon (1).png" alt="icon" />
-            </div>
-            <div class="card-txt">
-              <h5>Communication</h5>
-              <p>38 Courses</p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-icon">
-              <img src="Group.png" alt="icon" />
-            </div>
-            <div class="card-txt">
-              <h5>Videography</h5>
-              <p>38 Courses</p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-icon">
-              <img src="Icon (2).png" alt="" />
-            </div>
-            <div class="card-txt">
-              <h5>Photography</h5>
-              <p>38 Courses</p>
-            </div>
-          </div>
-        </div>
-        <br />
-
-        <div class="top-card-container">
-          <div class="card">
-            <div class="card-icon">
-              <img src="Icon (3).png" alt="" />
-            </div>
-            <div class="card-txt">
-              <h5>Marketing</h5>
-              <p>38 Courses</p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-icon">
-              <img src="Icon (4).png" alt="" />
-            </div>
-            <div class="card-txt">
-              <h5>Content Writing</h5>
-              <p>38 Courses</p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-icon">
-              <img src="Icon (5).png" alt="" />
-            </div>
-            <div class="card-txt">
-              <h5>Finance</h5>
-              <p>38 Courses</p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-icon">
-              <img src="Icon (7).png" alt="" />
-            </div>
-            <div class="card-txt">
-              <h5>Science</h5>
-              <p>38 Courses</p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-icon">
-              <img src="Icon.png" alt="" />
-            </div>
-            <div class="card-txt">
-              <h5>Network</h5>
-              <p>38 Courses</p>
-            </div>
-          </div>
-        </div>
+        <div class="top-card-container" id="top-box"></div> <br>
+        
+        <div class="top-card-container" id="second-top-box"></div>
       </div>
 
       <div class="feature-container">
@@ -188,54 +95,28 @@
 
         <div class="feature-card-container" id="second-card-container"></div>
       </div>
-
-      <div class="lp-ads-container">
-        <img src="Mask group.png" alt="img" /><span>
-          <div class="lp-txt-box">
-            <div class="lp-txt-div">
-              <p>GET MORE POWER FROM</p>
-              <br />
-              <h4>LearnPress Add-Ons</h4>
-            </div>
-            <div class="lp-btn-div">
-              <p>
-                The next level of LearnPress - LMS WordPress Plugin. More <br />
-                Powerful, Flexible and Magical Inside.
-              </p>
-
-              <button>Explorer Courses</button>
-            </div>
-          </div>
-        </span>
-      </div>
+      <div class="lp-ads-container" id="learn-press"></div>
+      <div class="counting-container" id="counting-box"></div>
 
 
-      <div class="counting-container">
-        <div class="count-bx">
-          <div>
-            <h3>25K+</h3>
-          <p>Active Students</p>
-          </div>
+      <div class="grow-skill-temp">
+        <div class="temp-img">
+          <img src="Vector.png" alt="img">
         </div>
-        <div class="count-bx">
-          <div>
-            <h3>899</h3>
-          <p>Total Courses</p>
-          </div>
-        </div>
-        <div class="count-bx">
-          <div>
-            <h3>158</h3>
-          <p>Instructor</p>
-          </div>
-        </div>
-        <div class="count-bx">
-          <div>
-            <h3>100%</h3>
-          <p>Satisfactions Rate</p>
-          </div>
+        <div class="temp-txt"> 
+          <h2>Grow us your skill <br> with LearnPress LMS</h2><br>
+          <p>We denounce with righteous indignation and dislike men who are <br>
+            so beguiled and demoralized that cannot trouble.</p>
+           <div >
+            <p>✅Certification</p>
+            <p>✅Certification</p>
+            <p>✅Certification</p>
+            <p>✅Certification</p>
+           </div>
+           <button class="temp-btn">Explor Course</button>
         </div>
       </div>
+
     </div>
   </body>
   <script src="index.js"></script>
