--- a/index.html
+++ b/index.html
@@ -117,6 +117,20 @@
         </div>
       </div>
 
+
+      <div class="word-p-container">
+        <img src="Mask group (1).png" alt="img"><span class="word-span">
+         <div class="word-div">
+          <div class="word-p">
+            <p>PROVIDING AMAZING</p>
+            <h3>Education Wordpress Theme</h3>
+          </div>
+          <div class="word-btn">
+            <p>The next level of LMS WordPress Theme. Learn anytime and anywhere.</p>
+           <div> <button>Explore Course</button></div>
+          </div></div>
+        </span>
+      </div>
     </div>
   </body>
   <script src="index.js"></script>
