--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
         </div>
         <br /><br />
 
-        <div class="top-card-container" id="top-box"></div> <br>
-        
+        <div class="top-card-container" id="top-box"></div>
+        <br />
+
         <div class="top-card-container" id="second-top-box"></div>
       </div>
 
@@ -98,39 +99,128 @@
       <div class="lp-ads-container" id="learn-press"></div>
       <div class="counting-container" id="counting-box"></div>
 
-
       <div class="grow-skill-temp">
         <div class="temp-img">
-          <img src="Vector.png" alt="img">
+          <img src="Vector.png" alt="img" />
         </div>
-        <div class="temp-txt"> 
-          <h2>Grow us your skill <br> with LearnPress LMS</h2><br>
-          <p>We denounce with righteous indignation and dislike men who are <br>
-            so beguiled and demoralized that cannot trouble.</p>
-           <div >
+        <div class="temp-txt">
+          <h2>
+            Grow us your skill <br />
+            with LearnPress LMS
+          </h2>
+          <br />
+          <p>
+            We denounce with righteous indignation and dislike men who are
+            <br />
+            so beguiled and demoralized that cannot trouble.
+          </p>
+          <div>
             <p>✅Certification</p>
             <p>✅Certification</p>
             <p>✅Certification</p>
             <p>✅Certification</p>
-           </div>
-           <button class="temp-btn">Explor Course</button>
+          </div>
+          <button class="temp-btn">Explor Course</button>
         </div>
       </div>
-
 
       <div class="word-p-container">
-        <img src="Mask group (1).png" alt="img"><span class="word-span">
-         <div class="word-div">
-          <div class="word-p">
-            <p>PROVIDING AMAZING</p>
-            <h3>Education Wordpress Theme</h3>
+        <img src="Mask group (1).png" alt="img" />
+        <span class="word-span">
+          <div class="word-div">
+            <div class="word-p">
+              <p>PROVIDING AMAZING</p>
+              <h3>Education Wordpress Theme</h3>
+            </div>
+            <div class="word-btn">
+              <p>
+                The next level of LMS WordPress Theme. Learn anytime and
+                anywhere.
+              </p>
+              <div><button>Explore Course</button></div>
+            </div>
           </div>
-          <div class="word-btn">
-            <p>The next level of LMS WordPress Theme. Learn anytime and anywhere.</p>
-           <div> <button>Explore Course</button></div>
-          </div></div>
         </span>
       </div>
+
+      <div class="feed-back-container">
+        <div class="fb-heading">
+          <h3>Student Feedbacks</h3>
+          <p>What Students Say About Academy LMS</p>
+        </div><br> <br>
+        <div class="students-fb">
+
+          <div class="st-fb-box">
+            <div >
+              <p class="fb-slash">//</p> 
+                <p class="fb-txt">I must explain to you how all this mistaken . 
+                  Tdea of denouncing pleasure and praising pain was
+                   born and I will give 
+                  you a complete account of the system and expound</p>
+            </div><br>
+            <div class="st-name">
+              <h5>Roe Smith</h5> 
+              <p>Designer</p>
+            </div>
+          </div>
+          <div class="st-fb-box">
+            <div >
+              <p class="fb-slash">//</p> 
+                <p class="fb-txt">I must explain to you how all this mistaken . 
+                  Tdea of denouncing pleasure and praising pain was
+                   born and I will give 
+                  you a complete account of the system and expound</p>
+            </div><br>
+            <div class="st-name">
+              <h5>Roe Smith</h5> 
+              <p>Designer</p>
+            </div>
+          </div>
+          <div class="st-fb-box">
+            <div >
+              <p class="fb-slash">//</p> 
+                <p class="fb-txt">I must explain to you how all this mistaken . 
+                  Tdea of denouncing pleasure and praising pain was
+                   born and I will give 
+                  you a complete account of the system and expound</p>
+            </div><br>
+            <div class="st-name">
+              <h5>Roe Smith</h5> 
+              <p>Designer</p>
+            </div>
+          </div>
+          <div class="st-fb-box">
+            <div >
+              <p class="fb-slash">//</p> 
+                <p class="fb-txt">I must explain to you how all this mistaken . 
+                  Tdea of denouncing pleasure and praising pain was
+                   born and I will give 
+                  you a complete account of the system and expound</p>
+            </div><br>
+            <div class="st-name">
+              <h5>Roe Smith</h5> 
+              <p>Designer</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="let-start-container">
+      <img src="BANNER.png" alt="banner">
+      </div>
+
+        <div class="latest-container">
+          <div class="latest-heading">
+            <div class="latest-txt">
+              <h2>Latest articles</h2><br>
+              <p>Explore our Free Acticles</p>
+            </div>
+            <div class="latest-btn">
+              <button>All articles</button>
+            </div>
+          </div>
+        </div>
     </div>
   </body>
   <script src="index.js"></script>
