--- a/index.html
+++ b/index.html
@@ -209,18 +209,45 @@
       <div class="let-start-container">
       <img src="BANNER.png" alt="banner">
       </div>
-
+ 
         <div class="latest-container">
           <div class="latest-heading">
             <div class="latest-txt">
-              <h2>Latest articles</h2><br>
+              <h2>Latest articles</h2><br> 
               <p>Explore our Free Acticles</p>
             </div>
             <div class="latest-btn">
               <button>All articles</button>
             </div>
           </div>
+          <div class="latest-card-slider">
+            <div class="latest-card">
+              <img src="Rectangle 139.png" alt="img">
+              <div class="latest-txt-box">
+                <h5>Best LearnPress WordPress Theme Collection for 2023</h5>
+                <img src="Meta (1).png" alt="img">
+                <p>Looking for an amazing & well-functional LearnPress WordPress Theme?...</p>
+              </div>
+            </div>
+            <div class="latest-card">
+              <img src="Rectangle 139 (1).png" alt="img">
+              <div class="latest-txt-box">
+                <h5>Best LearnPress WordPress Theme Collection for 2023</h5>
+                <img src="Meta (1).png" alt="img">
+                <p>Looking for an amazing & well-functional LearnPress WordPress Theme?...</p>
+              </div>
+            </div>
+            <div class="latest-card">
+              <img src="Rectangle 139 (2).png" alt="img">
+              <div class="latest-txt-box">
+                <h5>Best LearnPress WordPress Theme Collection for 2023</h5>
+                <img src="Meta (1).png" alt="img">
+                <p>Looking for an amazing & well-functional LearnPress WordPress Theme?...</p>
+              </div>
+            </div>
+          </div>
         </div>
+
     </div>
   </body>
   <script src="index.js"></script>
