--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <div class="latest-container">
           <div class="latest-heading">
             <div class="latest-txt">
-              <h2>Latest articles</h2><br> 
+              <h2>Latest articles</h2>
               <p>Explore our Free Acticles</p>
             </div>
             <div class="latest-btn">
@@ -248,6 +248,47 @@
           </div>
         </div>
 
+        <footer>
+          <div class="footer-container">
+            <div class="edu-box">
+              <img src="LOGO.png" alt="logo"><br><br>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+                 incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="help-box">
+              <h5>GET HELP</h5> <br>
+              <div>
+                <p>Contact Us</p>
+                <p>Latest Articles</p>
+                <p>FAQ</p>
+              </div>
+            </div>
+            <div class="program-box">
+              <h5>PROGRAMS</h5><br>
+              <div>
+              <P>Art & Design</P><br>
+              <P>Business</P><br>
+              <P>IT & Software</P><br>
+              <P>Languages</P><br>
+              <P>Programming</P>
+              </div>
+            </div>
+            <div class="contact-box">
+              <h5>CONTACT US</h5><br>
+             <div>
+              <P>Address: 2321 New Design Str, 
+                Lorem Ipsum10 Hudson Yards, USA</P> <br> <br>
+                <P>Tel: + (123) 2500-567-8988 <br>
+                  Mail: supportlms@gmail.com</P>
+             </div><br>
+             <img class="contact-img" src="Social.png" alt="img">
+            </div>
+          </div>
+
+         <div class="copy-right-container">
+          <p>Copyright © 2024 LearnPress LMS | Powered by ThimPress</p>
+         </div>
+        </footer>
     </div>
   </body>
   <script src="index.js"></script>
