--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
           <nav>
             <a href="">Home</a>
             <a href=""> Courses</a>
-            <a href="">Blog</a>
+            <a href="">Blogs</a>
             <a href="">Pages</a>
             <a href="">Learn Press Add-On</a>
             <a href="">Premium Theme</a>
           </nav>
           <div class="search-container">
-            <a class="login" href="">Login</a> <span class="slash">/</span>
+            <a class="login" href="">Login</a> <span class="slash"></span>
             <a class="reg" href="">Register</a>
             <img src="Search.png" alt=" srch-icon" />
           </div>
@@ -60,6 +60,7 @@
           <br />
           <button class="hero-txt-btn">Posts Comment</button>
         </div>
+        
       </section>
       <br /><br />
 
@@ -147,148 +148,182 @@
         <div class="fb-heading">
           <h3>Student Feedbacks</h3>
           <p>What Students Say About Academy LMS</p>
-        </div><br> <br>
+        </div>
+        <br />
+        <br />
         <div class="students-fb">
-
           <div class="st-fb-box">
-            <div >
-              <p class="fb-slash">//</p> 
-                <p class="fb-txt">I must explain to you how all this mistaken . 
-                  Tdea of denouncing pleasure and praising pain was
-                   born and I will give 
-                  you a complete account of the system and expound</p>
-            </div><br>
+            <div>
+              <p class="fb-slash">//</p>
+              <p class="fb-txt">
+                I must explain to you how all this mistaken . Tdea of denouncing
+                pleasure and praising pain was born and I will give you a
+                complete account of the system and expound
+              </p>
+            </div>
+            <br />
             <div class="st-name">
-              <h5>Roe Smith</h5> 
+              <h5>Roe Smith</h5>
               <p>Designer</p>
             </div>
           </div>
           <div class="st-fb-box">
-            <div >
-              <p class="fb-slash">//</p> 
-                <p class="fb-txt">I must explain to you how all this mistaken . 
-                  Tdea of denouncing pleasure and praising pain was
-                   born and I will give 
-                  you a complete account of the system and expound</p>
-            </div><br>
+            <div>
+              <p class="fb-slash">//</p>
+              <p class="fb-txt">
+                I must explain to you how all this mistaken . Tdea of denouncing
+                pleasure and praising pain was born and I will give you a
+                complete account of the system and expound
+              </p>
+            </div>
+            <br />
             <div class="st-name">
-              <h5>Roe Smith</h5> 
+              <h5>Roe Smith</h5>
               <p>Designer</p>
             </div>
           </div>
           <div class="st-fb-box">
-            <div >
-              <p class="fb-slash">//</p> 
-                <p class="fb-txt">I must explain to you how all this mistaken . 
-                  Tdea of denouncing pleasure and praising pain was
-                   born and I will give 
-                  you a complete account of the system and expound</p>
-            </div><br>
+            <div>
+              <p class="fb-slash">//</p>
+              <p class="fb-txt">
+                I must explain to you how all this mistaken . Tdea of denouncing
+                pleasure and praising pain was born and I will give you a
+                complete account of the system and expound
+              </p>
+            </div>
+            <br />
             <div class="st-name">
-              <h5>Roe Smith</h5> 
+              <h5>Roe Smith</h5>
               <p>Designer</p>
             </div>
           </div>
           <div class="st-fb-box">
-            <div >
-              <p class="fb-slash">//</p> 
-                <p class="fb-txt">I must explain to you how all this mistaken . 
-                  Tdea of denouncing pleasure and praising pain was
-                   born and I will give 
-                  you a complete account of the system and expound</p>
-            </div><br>
+            <div>
+              <p class="fb-slash">//</p>
+              <p class="fb-txt">
+                I must explain to you how all this mistaken . Tdea of denouncing
+                pleasure and praising pain was born and I will give you a
+                complete account of the system and expound
+              </p>
+            </div>
+            <br />
             <div class="st-name">
-              <h5>Roe Smith</h5> 
+              <h5>Roe Smith</h5>
               <p>Designer</p>
             </div>
           </div>
-
         </div>
       </div>
 
       <div class="let-start-container">
-      <img src="BANNER.png" alt="banner">
+        <img src="BANNER.png" alt="banner" />
       </div>
- 
-        <div class="latest-container">
-          <div class="latest-heading">
-            <div class="latest-txt">
-              <h2>Latest articles</h2>
-              <p>Explore our Free Acticles</p>
-            </div>
-            <div class="latest-btn">
-              <button>All articles</button>
+
+      <div class="latest-container">
+        <div class="latest-heading">
+          <div class="latest-txt">
+            <h2>Latest articles</h2>
+            <p>Explore our Free Acticles</p>
+          </div>
+          <div class="latest-btn">
+            <button>All articles</button>
+          </div>
+        </div>
+        <div class="latest-card-slider">
+          <div class="latest-card">
+            <img src="Rectangle 139.png" alt="img" />
+            <div class="latest-txt-box">
+              <h5>Best LearnPress WordPress Theme Collection for 2023</h5>
+              <img src="Meta (1).png" alt="img" />
+              <p>
+                Looking for an amazing & well-functional LearnPress WordPress
+                Theme?...
+              </p>
             </div>
           </div>
-          <div class="latest-card-slider">
-            <div class="latest-card">
-              <img src="Rectangle 139.png" alt="img">
-              <div class="latest-txt-box">
-                <h5>Best LearnPress WordPress Theme Collection for 2023</h5>
-                <img src="Meta (1).png" alt="img">
-                <p>Looking for an amazing & well-functional LearnPress WordPress Theme?...</p>
-              </div>
+          <div class="latest-card">
+            <img src="Rectangle 139 (1).png" alt="img" />
+            <div class="latest-txt-box">
+              <h5>Best LearnPress WordPress Theme Collection for 2023</h5>
+              <img src="Meta (1).png" alt="img" />
+              <p>
+                Looking for an amazing & well-functional LearnPress WordPress
+                Theme?...
+              </p>
             </div>
-            <div class="latest-card">
-              <img src="Rectangle 139 (1).png" alt="img">
-              <div class="latest-txt-box">
-                <h5>Best LearnPress WordPress Theme Collection for 2023</h5>
-                <img src="Meta (1).png" alt="img">
-                <p>Looking for an amazing & well-functional LearnPress WordPress Theme?...</p>
-              </div>
-            </div>
-            <div class="latest-card">
-              <img src="Rectangle 139 (2).png" alt="img">
-              <div class="latest-txt-box">
-                <h5>Best LearnPress WordPress Theme Collection for 2023</h5>
-                <img src="Meta (1).png" alt="img">
-                <p>Looking for an amazing & well-functional LearnPress WordPress Theme?...</p>
-              </div>
+          </div>
+          <div class="latest-card">
+            <img src="Rectangle 139 (2).png" alt="img" />
+            <div class="latest-txt-box">
+              <h5>Best LearnPress WordPress Theme Collection for 2023</h5>
+              <img src="Meta (1).png" alt="img" />
+              <p>
+                Looking for an amazing & well-functional LearnPress WordPress
+                Theme?...
+              </p>
             </div>
           </div>
         </div>
+      </div>
 
-        <footer>
-          <div class="footer-container">
-            <div class="edu-box">
-              <img src="LOGO.png" alt="logo"><br><br>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                 incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-            <div class="help-box">
-              <h5>GET HELP</h5> <br>
-              <div>
-                <p>Contact Us</p>
-                <p>Latest Articles</p>
-                <p>FAQ</p>
-              </div>
-            </div>
-            <div class="program-box">
-              <h5>PROGRAMS</h5><br>
-              <div>
-              <P>Art & Design</P><br>
-              <P>Business</P><br>
-              <P>IT & Software</P><br>
-              <P>Languages</P><br>
-              <P>Programming</P>
-              </div>
-            </div>
-            <div class="contact-box">
-              <h5>CONTACT US</h5><br>
-             <div>
-              <P>Address: 2321 New Design Str, 
-                Lorem Ipsum10 Hudson Yards, USA</P> <br> <br>
-                <P>Tel: + (123) 2500-567-8988 <br>
-                  Mail: supportlms@gmail.com</P>
-             </div><br>
-             <img class="contact-img" src="Social.png" alt="img">
+      <footer>
+        <div class="footer-container">
+          <div class="edu-box">
+            <img src="LOGO.png" alt="logo" /><br /><br />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+          <div class="help-box">
+            <h5>GET HELP</h5>
+            <br />
+            <div>
+              <p>Contact Us</p>
+              <br />
+              <p>Latest Articles</p>
+              <br />
+              <p>FAQ</p>
             </div>
           </div>
+          <div class="program-box">
+            <h5>PROGRAMS</h5>
+            <br />
+            <div>
+              <p>Art & Design</p>
+              <br />
+              <p>Business</p>
+              <br />
+              <p>IT & Software</p>
+              <br />
+              <p>Languages</p>
+              <br />
+              <p>Programming</p>
+            </div>
+          </div>
+          <div class="contact-box">
+            <h5>CONTACT US</h5>
+            <br />
+            <div>
+              <p>
+                Address: 2321 New Design Str, Lorem Ipsum10 Hudson Yards, USA
+              </p>
+              <br />
+              <br />
+              <p>
+                Tel: + (123) 2500-567-8988 <br />
+                Mail: supportlms@gmail.com
+              </p>
+            </div>
+            <br />
+            <img class="contact-img" src="Social.png" alt="img" />
+          </div>
+        </div>
 
-         <div class="copy-right-container">
+        <div class="copy-right-container">
           <p>Copyright © 2024 LearnPress LMS | Powered by ThimPress</p>
-         </div>
-        </footer>
+        </div>
+      </footer>
     </div>
   </body>
   <script src="index.js"></script>
