--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <header>
-        <div class="nav-container">
+        <div class="nav-container" id="navbar">
           <img src="LOGO.png" alt="" />
           <nav>
             <a href="">Home</a>
@@ -44,44 +44,153 @@
           <a href="">Premium Theme</a>
         </div>
       </header>
+
+      <!-- hero section begins here -->
       <section>
         <div class="hero">
           <img class="m-hero" src="Image.png" alt="hero-img " />
+          <div class="hero-txt">
+            <h1>
+              Build Skills with <br />
+              Online Course
+            </h1>
+            <br />
+            <p>
+              We denounce with righteous indignation and dislike men who are
+            </p>
+            <p>so beguiled and demoralized that cannot trouble.</p>
+            <br />
+            <button class="hero-txt-btn">Posts Comment</button>
+          </div>
         </div>
 
-        <div class="hero-txt">
-          <h1>
-            Build Skills with <br />
-            Online Course
-          </h1>
-          <br />
-          <p>We denounce with righteous indignation and dislike men who are</p>
-          <p class="hero-p">so beguiled and demoralized that cannot trouble.</p>
-          <br />
-          <button class="hero-txt-btn">Posts Comment</button>
-        </div>
-        
+        <div id="hero"></div>
       </section>
+      <!-- end of hero section -->
       <br /><br />
 
-      <div class="top-container">
-        <div class="top-heading">
-          <div class="heading-div">
-            <h4>Top Categories</h4>
-            <p>Explore our Popular Categories</p>
+      <!-- top-categories  sartsfrom here-->
+      <section>
+        <div class="top-container">
+          <div id="top-heading-txt">
+            <div class="top-heading">
+              <div class="heading-div">
+                <h4>Top Categories</h4>
+                <p>Explore our Popular Categories</p>
+              </div>
+              <div class="h-btn">
+                <button>All Categories</button>
+              </div>
+            </div>
           </div>
-          <div class="h-btn">
-            <button>All Categories</button>
+
+          <br /><br />
+          <div class="top-card-container">
+            <div class="card">
+              <div class="card-icon">
+                <img src="Icon.png" alt="icon" />
+              </div>
+              <div class="card-txt">
+                <h5>Art & Design</h5>
+                <p>38 Courses</p>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-icon">
+                <img src="Component 2.png" alt="icon" />
+              </div>
+              <div class="card-txt">
+                <h5>Development</h5>
+                <p>38 Courses</p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-icon">
+                <img src="Icon (1).png" alt="icon" />
+              </div>
+              <div class="card-txt">
+                <h5>Communication</h5>
+                <p>38 Courses</p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-icon">
+                <img src="Group.png" alt="icon" />
+              </div>
+              <div class="card-txt">
+                <h5>Videography</h5>
+                <p>38 Courses</p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-icon">
+                <img src="Icon (2).png" alt="icon" />
+              </div>
+              <div class="card-txt">
+                <h5>Photography</h5>
+                <p>38 Courses</p>
+              </div>
+            </div>
           </div>
+          <br />
+
+
+          <div class="top-card-container">
+            <div class="card">
+              <div class="card-icon">
+                <img src="Icon (3).png" alt="icon" />
+              </div>
+              <div class="card-txt">
+                <h5>Marketing</h5>
+                <p>38 Courses</p>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-icon">
+                <img src="Icon (4).png" alt="icon" />
+              </div>
+              <div class="card-txt">
+                <h5>Content Writing</h5>
+                <p>38 Courses</p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-icon">
+                <img src="Icon (5).png" alt="icon" />
+              </div>
+              <div class="card-txt">
+                <h5>Finance</h5>
+                <p>38 Courses</p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-icon">
+                <img src="Icon (7).png" alt="icon" />
+              </div>
+              <div class="card-txt">
+                <h5>Science</h5>
+                <p>38 Courses</p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-icon">
+                <img src="Icon.png" alt="icon" />
+              </div>
+              <div class="card-txt">
+                <h5>Network</h5>
+                <p>38 Courses</p>
+              </div>
+            </div>
+          </div>
+          <br />
         </div>
-        <br /><br />
+      </section>
+      <br />
+      <!-- top catgories ending -->
 
-        <div class="top-card-container" id="top-box"></div>
-        <br />
-
-        <div class="top-card-container" id="second-top-box"></div>
-      </div>
-
+      <!-- fatured courses begins here -->
       <div class="feature-container">
         <div class="feature-heading">
           <div class="feat-txt">
@@ -93,13 +202,67 @@
           </div>
         </div>
 
-        <div class="feature-card-container" id="card-container"></div>
+        <div class="feature-card-container" id="card-container">
+        </div>
 
         <div class="feature-card-container" id="second-card-container"></div>
       </div>
-      <div class="lp-ads-container" id="learn-press"></div>
-      <div class="counting-container" id="counting-box"></div>
+      <!-- featured courses ending -->
 
+
+      <!-- learnPress ads begins here -->
+      <div class="lp-ads-container">
+        <img src="Mask group.png"alt="img" /><span>
+          <div class="lp-txt-box">
+            <div class="lp-txt-div">
+              <p>GET MORE POWER FROM</p>
+              <br />
+              <h4>LearnPress Add-Ons</h4>
+            </div>
+            <div class="lp-btn-div">
+              <p>
+                The next level of LearnPress - LMS WordPress Plugin.
+                 More  Powerful, Flexible and Magical Inside.
+              </p>
+              <button>Explore Courses</button>
+            </div>
+          </div>
+        </span>
+      </div>
+      <!-- learnPress ads stops here -->
+
+
+<!--   counting box begins -->
+      <div class="counting-container">
+
+        <div class="count-bx" >
+          <div>
+            <h3>25+</h3>
+          <p>Active Stsudent</p>
+          </div>
+        </div>
+        <div class="count-bx" id="counting-box">
+          <div>
+            <h3>899</h3>
+          <p>Total Courses</p>
+          </div>
+        </div>
+        <div class="count-bx" id="counting-box">
+          <div>
+            <h3>158</h3>
+          <p>Instructor</p>
+          </div>
+        </div>
+        <div class="count-bx" id="counting-box">
+          <div>
+            <h3>100%</h3>
+          <p>Satisfaction Rate</p>
+          </div>
+        </div>
+      </div>
+      <!-- counting box ends -->
+
+      <!-- grow skills begins -->
       <div class="grow-skill-temp">
         <div class="temp-img">
           <img src="Vector.png" alt="img" />
@@ -124,7 +287,9 @@
           <button class="temp-btn">Explor Course</button>
         </div>
       </div>
+      <!-- grow skills begins -->
 
+     <!-- word press begins here -->
       <div class="word-p-container">
         <img src="Mask group (1).png" alt="img" />
         <span class="word-span">
@@ -143,7 +308,9 @@
           </div>
         </span>
       </div>
+      <!-- word press ends here -->
 
+      <!-- students feedback begins from here -->
       <div class="feed-back-container">
         <div class="fb-heading">
           <h3>Student Feedbacks</h3>
@@ -214,11 +381,15 @@
           </div>
         </div>
       </div>
+      <!-- students feedback ends here -->
 
+      <!-- let start begins here -->
       <div class="let-start-container">
         <img src="BANNER.png" alt="banner" />
       </div>
+      <!-- let start ends here -->
 
+      <!-- latest articles begins here -->
       <div class="latest-container">
         <div class="latest-heading">
           <div class="latest-txt">
@@ -265,6 +436,7 @@
           </div>
         </div>
       </div>
+      <!-- latest articles ends here -->
 
       <footer>
         <div class="footer-container">
