--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
       <div class="grow-skill-temp">
         <div class="temp-img">
           <img src="Vector.png" alt="img" />
-        </div>
+        </div> 
         <div class="temp-txt">
           <h2>
             Grow us your skill <br />
@@ -289,6 +289,7 @@
       </div>
       <!-- grow skills begins -->
 
+      
      <!-- word press begins here -->
       <div class="word-p-container">
         <img src="Mask group (1).png" alt="img" />
@@ -445,7 +446,7 @@
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod incididunt ut labore et dolore magna aliqua.
-            </p>
+            </p> <br> <br>
           </div>
           <div class="help-box">
             <h5>GET HELP</h5>
@@ -455,7 +456,7 @@
               <br />
               <p>Latest Articles</p>
               <br />
-              <p>FAQ</p>
+              <p>FAQ</p> <br>
             </div>
           </div>
           <div class="program-box">
@@ -472,7 +473,7 @@
               <br />
               <p>Programming</p>
             </div>
-          </div>
+          </div> <br>
           <div class="contact-box">
             <h5>CONTACT US</h5>
             <br />
@@ -480,7 +481,6 @@
               <p>
                 Address: 2321 New Design Str, Lorem Ipsum10 Hudson Yards, USA
               </p>
-              <br />
               <br />
               <p>
                 Tel: + (123) 2500-567-8988 <br />
